--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "2048-js",
+  "name": "@finale1891/2048-js",
   "version": "1.0.0",
   "description": "2048 Game to play in the Terminal",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/j97zhu/2048-js/issues"
   },
-  "homepage": "https://github.com/j97zhu/2048-js#readme"
+  "homepage": "https://github.com/j97zhu/2048-js#readme",
+  "devDependencies": {
+    "clivas": "^0.2.0",
+    "keypress": "^0.2.1"
+  }
 }
