--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "bugs": {
     "url": "https://github.com/j97zhu/2048-js/issues"
   },
+  "bin": {
+    "2048": "src/index.js"
+  },
   "homepage": "https://github.com/j97zhu/2048-js#readme",
   "devDependencies": {
     "clivas": "^0.2.0",
