--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@finale1891/2048-js",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "2048 Game to play in the Terminal",
   "main": "src/index.js",
   "scripts": {
@@ -25,7 +25,7 @@
     "2048": "src/index.js"
   },
   "homepage": "https://github.com/j97zhu/2048-js#readme",
-  "devDependencies": {
+  "dependencies": {
     "clivas": "^0.2.0",
     "keypress": "^0.2.1"
   }
